apps/base/media/tdarr/gpu-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr-gpu-node
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tdarr
      app.kubernetes.io/component: gpu-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tdarr
        app.kubernetes.io/component: gpu-node
    spec:
      nodeSelector:
        gpu: "true"
      tolerations:
        - key: workload
          operator: Equal
          value: gpu-only
          effect: NoSchedule
      containers:
        - name: tdarr-node
          image: artifactory.local.hejsan.xyz/docker/haveagitgat/tdarr_node:2.96.01@sha256:bd98a6a9f46c88147dd10948316a9659766da8374c5de07e7b4f6637a69217e5
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: node-config
              mountPath: /app/configs
            - name: node-logs
              mountPath: /app/logs
            - name: media
              mountPath: /media
            - name: temp
              mountPath: /temp
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 4000m
              memory: 4Gi
      volumes:
        - name: node-config
          emptyDir: {}
        - name: node-logs
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media-media-shared-nfs-pvc
        - name: temp
          emptyDir: {}
