apps/base/media/tdarr/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tdarr
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tdarr
        app.kubernetes.io/component: server
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: tdarr
          image: docker.io/haveagitgat/tdarr:2.96.01@sha256:8531c8261cb7a18f8ae5db5df2d2c93fc5b584472dcb4123bf69812cb429a305
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 8265
            - name: server
              containerPort: 8266
          volumeMounts:
            - name: config
              mountPath: /app/server
              subPath: server
            - name: config
              mountPath: /app/configs
              subPath: configs
            - name: config
              mountPath: /app/logs
              subPath: logs
            - name: media
              mountPath: /media
              readOnly: true
            - name: temp
              mountPath: /temp
          readinessProbe:
            tcpSocket:
              port: web
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: web
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tdarr-config-linstor
        - name: media
          persistentVolumeClaim:
            claimName: media-media-shared-nfs-pvc
        - name: temp
          emptyDir: {}
