apps/base/media/tdarr/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
spec:
  selector:
    app.kubernetes.io/name: tdarr
    app.kubernetes.io/component: server
  ports:
    - name: web
      port: 8265
      targetPort: web
    - name: server
      port: 8266
      targetPort: server
