apps/base/media/tdarr/server-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tdarr-server.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: tdarr
          port: server
  tls:
    secretName: ${CERT_SECRET_INTERNAL}
